--- a/history.txt
+++ b/history.txt
@@ -1,1 +1,1 @@
-concert-this_lucius,lucius|movie-this_die hard,die hard|concert-this_lucius,lucius|spotify-this-song_turn it around,turn it around|concert-this_lucius,lucius|movie-this_die hard,die hard|concert-this_lucius,lucius|concert-this_the black keys,the black keys|concert-this_lizzo,lizzo|concert-this_lizzo,lizzo|concert-this_lizzo,lizzo|movie-this_die hard,die hard|movie-this_die hard,die hard|movie-this_the emoji movie,the emoji movie|movie-this_the emoji movie,the emoji movie|movie-this_the emoji movie,the emoji movie|spotify-this-song_turn it around,turn it around|concert-this_lizzo,lizzo|
+concert-this_lucius,lucius|movie-this_die hard,die hard|concert-this_lucius,lucius|spotify-this-song_turn it around,turn it around|concert-this_lucius,lucius|movie-this_die hard,die hard|concert-this_lucius,lucius|concert-this_the black keys,the black keys|concert-this_lizzo,lizzo|concert-this_lizzo,lizzo|concert-this_lizzo,lizzo|movie-this_die hard,die hard|movie-this_die hard,die hard|movie-this_the emoji movie,the emoji movie|movie-this_the emoji movie,the emoji movie|movie-this_the emoji movie,the emoji movie|spotify-this-song_turn it around,turn it around|concert-this_lizzo,lizzo|concert-this_lizzo,lizzo|movie-this_twister,twister|spotify-this-song_juice,juice|movie-this_twister,twister|concert-this_lizzo,lizzo|spotify-this-song_makeba,makeba|spotify-this-song_makeba,makeba|
