Dryed up methods

--- a/history.txt
+++ b/history.txt
@@ -1,1 +1,1 @@
-spotify-this-song_makeba,makeba|concert-this_lizzo,lizzo|spotify-this-song_makeba,makeba|
+concert-this_lizzo,lizzo|concert-this_lizzo,lizzo|concert-this_lizzo,lizzo|concert-this_lizzo,lizzo|concert-this_lizzo,lizzo|concert-this_lucius,lucius|concert-this_lucius,lucius|movie-this_die hard,die hard|movie-this_space jam,space jam|movie-this_space jam,space jam|
